--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,8 @@ services:
     build: .
     restart: unless-stopped
     ports:
-      - 8083:5000
+      - 8083:7860
+    command: ["--host", "0.0.0.0", "--port", "7860"]
     networks:
       - external_network
       - internal_network
