Fix volume mount

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - 8083:7860
     command: ["--host", "0.0.0.0", "--port", "7860"]
     volumes:
-      - ./src:src
+      - ./src:/workspace/F5-TTS/src
     networks:
       - external_network
       - internal_network
